--- a/src/components/cardtypes/PatternCard/PatternCard.css
+++ b/src/components/cardtypes/PatternCard/PatternCard.css
@@ -135,7 +135,7 @@
     content: "";
     position: absolute;
     width: 200px;
-    height: 6%;
+    height: 70%;
     background-color: #FFF;
     /* Change to desired color */
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
@@ -161,6 +161,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .kratos-rage-box {
