--- a/src/components/cardtypes/DahakaCard/DahakaCard.css
+++ b/src/components/cardtypes/DahakaCard/DahakaCard.css
@@ -1,10 +1,12 @@
 .dahaka .bp-card {
   overflow: hidden;
   height: fit-content;
+  max-width: 100%;
 }
 
 .dahaka .ai-card {
   height: fit-content;
+  max-width: 100%;
 }
 
 .dahaka {
