Refactor: Text parsing overhaul

--- a/src/components/cardtypes/PatternCard/PatternCard.css
+++ b/src/components/cardtypes/PatternCard/PatternCard.css
@@ -84,7 +84,7 @@
 
 .gate .invertible,
 .pattern-ability-gate .invertible,
-.pattern .invertible,
+.pattern-abilities .invertible,
 .icon .invertible,
 .kratos-option .invertible {
     filter: invert(1);
