--- a/src/styles/weaponStats.css
+++ b/src/styles/weaponStats.css
@@ -3,6 +3,10 @@
 	padding: 3% 0;
 	background-color: #BFBCAB;
 	font-size: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 25px;
 }
 
 .weapon-stats img {
@@ -16,7 +20,7 @@
 	gap: 0.5rem;
 }
 
-.weapon-stats .gate svg {
+.gate svg {
 	height: 1.5em;
 }
 
