--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,24 @@
+.filters-hamburger-button {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color: unset;
+}
+
+.hamburger-bar {
+  background-color: gray;
+  width: 28px;
+  height: 4px;
+}
+
+.filters-menu {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  top: -23px;
+  right: -14px;
+}
+
 .app-layout {
   height: 100vh;
   width: 100vw;
@@ -6,7 +27,6 @@
 .top-menu {
   position: relative;
   flex: 1;
-  width: 100vw;
 }
 
 .layout-nav {
@@ -58,10 +78,6 @@
   justify-content: space-around;
   align-items: center;
   padding: 20px;
-}
-
-.app-header div {
-  flex: 1;
 }
 
 .app-header h1 {
