--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,24 +1,3 @@
-.filters-hamburger-button {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  background-color: unset;
-}
-
-.hamburger-bar {
-  background-color: gray;
-  width: 28px;
-  height: 4px;
-}
-
-.filters-menu {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  top: -23px;
-  right: -14px;
-}
-
 .app-layout {
   height: 100vh;
   width: 100vw;
@@ -89,6 +68,36 @@
   background-color: unset;
 }
 
+.filters-hamburger-button {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color: unset;
+  z-index: 550;
+}
+
+.hamburger-bar {
+  background-color: gray;
+  width: 28px;
+  height: 4px;
+}
+
+.filters-menu {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.filter-sidebar {
+  background-color: rgb(59, 59, 59);
+  height: 100vh;
+  width: 100vw;
+  left: 0%;
+  top: 0%;
+  position: fixed;
+  z-index: 525;
+}
+
 @media (min-width: 820px) {
   .menu-button {
     display: none;
@@ -119,4 +128,13 @@
     align-items: center;
   }
 
+
+  .filters-menu {
+    position: static;
+  }
+
+  .filter-sidebar {
+    width: 30%;
+    left: 70%;
+  }
 }
