New: Payload cards

--- a/src/styles/cardsStyle.css
+++ b/src/styles/cardsStyle.css
@@ -3,6 +3,11 @@
 	height: 414px;
 }
 
+.mini-american-landscape {
+	height: 270px;
+	width: 414px;
+}
+
 .standard {
 	width: 326.4px;
 	height: 456.96px;
