--- a/src/styles/cardlist.css
+++ b/src/styles/cardlist.css
@@ -24,13 +24,13 @@
   flex-direction: column;
   align-items: center;
   gap: 40px;
-  margin: 4%;
+  margin: 0 4%;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 0% 2% 2% 2%;
+  padding: 2%;
 }
 
 .card-list::-webkit-scrollbar-thumb {
@@ -79,13 +79,13 @@
   margin-right: 5px;
   border-radius: 5px;
   padding: 5px 8px;
-  background-color: rgb(48, 48, 48);
+  background-color: var(--main);
   text-align: left;
   width: max-content;
 }
 
 .dropdown-list-item__selected {
-  background-color: rgb(84, 84, 84);
+  background-color: var(--main-light);
 }
 /* END Filters */
 
@@ -97,8 +97,6 @@
   justify-content: end;
   gap: 0.5em;
   margin: 0.5em 0;
-  border-bottom: 1px solid rgb(84, 84, 84);
-  padding-bottom: 0.5rem;
 }
 
 .card-list__control-bar--page-buttons {
@@ -111,6 +109,7 @@
 .card-list__control-bar--page-buttons button {
   padding: 4px 12px;
   margin: 0px 10px;
+  background-color: var(--main-dark);
 }
 
 .card-list__control-bar--search-wrapper {
@@ -121,7 +120,6 @@
   .card-list {
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 0 4%;
     justify-content: center;
   }
 
@@ -135,7 +133,6 @@
   .card-list__control-bar--page-contols {
     flex-direction: unset;
     justify-content: center;
-    border: unset;
   }
 
   .filter-reset-button {
@@ -155,7 +152,6 @@
   .card-list__control-bar {
     display: flex;
     width: 100%;
-    margin-bottom: 20px;
   }
 
   .card-list__control-bar--page-contols>* {
@@ -170,7 +166,6 @@
   .card-list__control-bar--sort-search {
     width: 120px;
     font-size: 14px;
-    border: none;
     box-sizing: border-box;
   }
 
@@ -183,12 +178,12 @@
   }
 
   .dropdown-list-item:hover {
-    background-color: rgb(66, 66, 66);
+    background-color: var(--main);
   }
 }
 
 .sort-suggestions-list {
-  background-color: rgb(84, 84, 84);
+  background-color: var(--main);
   position: absolute;
   border-top: none;
   list-style-type: none;
@@ -224,10 +219,11 @@
 
 .sort-suggestions-list li .tooltip-trigger {
   text-decoration: none;
+  color: white;
 }
 
 .sort-suggestions-list li:hover {
-  background-color: rgb(110, 110, 110);
+  background-color: var(--accent);
 }
 
 .sort-suggestion-tooltip {
