--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -43,13 +43,13 @@
   padding: 3px 15px;
   font-size: 1.5rem;
   border: 1px solid #ffffff00;
-  background-color: rgb(86, 86, 86);
+  background-color: var(--main-light);
   border-radius: 15px;
 }
 
 .layout-nav li:hover {
-  background-color: rgb(59, 59, 59);
-  border: 1px solid rgb(59, 59, 59);
+  background-color: var(--main);
+  border: 1px solid var(--main);
 }
 
 .layout-nav ul a {
@@ -68,6 +68,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--main-light);
 }
 
 .menu-button, .filters-hamburger-button {
@@ -80,7 +81,7 @@
 }
 
 .hamburger-bar {
-  background-color: gray;
+  background-color: var(--accent);
   width: 28px;
   height: 4px;
 }
@@ -92,7 +93,7 @@
 }
 
 .filter-sidebar {
-  background-color: rgb(59, 59, 59);
+  background-color: var(--main);
   height: 100dvh;
   width: 100vw;
   left: 0%;
@@ -110,7 +111,7 @@
   top: 60px;
   left: 0;
   width: 100vw;
-  background-color: rgb(59, 59, 59);
+  background-color: var(--main);
   padding: 20px 10px;
   box-sizing: border-box;
 }
