--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -48,8 +48,8 @@
 }
 
 .layout-nav li:hover {
-  background-color: var(--main);
-  border: 1px solid var(--main);
+  background-color: var(--accent);
+  border: 1px solid var(--accent);
 }
 
 .layout-nav ul a {
@@ -68,7 +68,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--main-light);
+  background-color: var(--main-midtone);
 }
 
 .menu-button, .filters-hamburger-button {
