--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
   --accent-light: #c0eef3;
   --accent: #70a1a2;
   --accent-dark: #588585;
+  --accent-hover: #c57856;
   
   --main-light: #494949;
   --main-midtone: #333333;
