--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -93,7 +93,7 @@
 }
 
 .filter-sidebar {
-  background-color: var(--main);
+  background-color: var(--main-midtone);
   height: 100dvh;
   width: 100vw;
   left: 0%;
