--- a/src/components/cardtypes/AttackCard/AttackCard.css
+++ b/src/components/cardtypes/AttackCard/AttackCard.css
@@ -6,6 +6,9 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 /* Header */
@@ -156,6 +159,42 @@
   line-height: 18px;
 }
 
+/* Zone Diagram */
+.ai-card__zone-diagram {
+  display: grid;
+  grid-template-columns: repeat(25, 9px);
+  gap: 2px;
+  background-color: var(--papyrus-dark);
+  justify-content: center;
+}
+
+.ai-card__zone-diagram__space {
+  aspect-ratio: 1/1;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
+.ai-card__zone-diagram__space img {
+  filter: saturate(0) invert(1);
+}
+
+.zone-type-W {
+  background-color: unset;
+  border: 0.5px solid rgb(70, 70, 70);
+  box-sizing: border-box;
+}
+
+.zone-type-R {
+  background-color: rgba(116, 12, 12, 1);
+}
+
+.zone-type-N {
+  background-color: rgba(76, 10, 10, 1);
+}
+
 /* After Attack */
 .ai-card__after-attack-list {
   margin: 0;
@@ -199,9 +238,6 @@
   min-height: 50%;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
 }
 
 .ai-card__main-body::-webkit-scrollbar {
