--- a/src/styles/cardlist.css
+++ b/src/styles/cardlist.css
@@ -47,48 +47,6 @@
 	justify-content: center;
 }
 
-/* Filters */
-.dropdown-button {
-  padding: 0 20px;
-  border: unset;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  font-size: 14px;
-}
-
-.filters-container {
-  flex: 1;
-  overflow-y: auto;
-  padding: 4%;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.filters-list {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-}
-
-.dropdown-list-item {
-  display: block;
-  margin-bottom: 5px;
-  margin-right: 5px;
-  border-radius: 5px;
-  padding: 5px 8px;
-  background-color: var(--main);
-  text-align: left;
-  width: max-content;
-}
-
-.dropdown-list-item__selected {
-  background-color: var(--main-light);
-}
-/* END Filters */
-
 .card-list__control-bar--page-contols {
   display: flex;
   flex: 1;
@@ -256,6 +214,7 @@
   border: 1px solid lightgray;
   background-color: slategrey;
   padding: 2px;
+  gap: 2px;
 }
 
 .card-menu button {
@@ -266,10 +225,15 @@
   aspect-ratio: 1/1;
 }
 
+.card-menu button:disabled {
+  background-color: rgba(20, 20, 20);
+  filter: brightness(0.3);
+}
+
 .card-menu .invertible {
   filter: invert(1);
 }
 
-.card-menu button:hover {
-  background-color: rgba(20, 20, 20, 0.2);
+.card-menu button:enabled:hover {
+  background-color: rgba(20, 20, 20, 0.3);
 }
