--- a/src/components/cardtypes/ConditionCard/ConditionCard.css
+++ b/src/components/cardtypes/ConditionCard/ConditionCard.css
@@ -12,12 +12,13 @@
   color: black;
 }
 
+.condition-title-block {
+  padding: 5px;
+}
+
 .condition-title {
   text-align: center;
   color: #ae6511;
-  font-size: 18px;
-  border-radius: 9px 9px 0 0;
-  padding: 5px;
 }
 
 .condition-info {
@@ -44,7 +45,7 @@
 	text-align: center;
 }
 
-.condition-resolution-box {
+.condition-abilities-box {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,7 +54,7 @@
   margin: 15px 0;
 }
 
-.condition-resolution-header {
+.condition-abilities-header {
   color: white;
   background-color: #ae6511;
   border: 1px solid white;
@@ -61,15 +62,13 @@
   padding: 0px 4px;
 }
 
-.condition-resolution {
+.condition-abilities {
   background-color: lightgray;
   padding: 6px 30px;
 	box-sizing: border-box;
   line-height: 15px;
   text-align: center;
   width: 100%;
-  display: flex;
-	flex-direction: column;
   gap: 5px;
   justify-content: center;
 }
